--- a/SpacePizza/Base.lproj/Main.storyboard
+++ b/SpacePizza/Base.lproj/Main.storyboard
@@ -36,6 +36,9 @@
                                 <state key="normal" title="low">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="lowSpaceJunkChange:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kLU-ly-Of1"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Yx-KZ-V5O" userLabel="medium">
                                 <rect key="frame" x="150" y="368" width="75" height="75"/>
@@ -46,6 +49,9 @@
                                 <state key="normal" title="medium">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="mediumSpaceJunkChange:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JRR-W1-ZzI"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akk-Dh-WI4" userLabel="high">
                                 <rect key="frame" x="284" y="368" width="75" height="75"/>
@@ -56,6 +62,9 @@
                                 <state key="normal" title="high">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="highSpaceJunkChange:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7jM-Cv-TBF"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKj-x5-MWE">
                                 <rect key="frame" x="110" y="139.5" width="155" height="82"/>
@@ -69,7 +78,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="S  p  a  c  e    J u n k    L e v e l" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4fE-aB-PR9">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="S  p  a  c  e    J u n k    L e v e l" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4fE-aB-PR9">
                                 <rect key="frame" x="56" y="330" width="262" height="28"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.70254823825503354" colorSpace="calibratedRGB"/>
@@ -78,7 +87,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.28880119319999997" green="0.56275337930000002" blue="0.88472884890000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="akk-Dh-WI4" secondAttribute="trailing" id="1ou-7j-eZu"/>
+                            <constraint firstItem="akk-Dh-WI4" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="1ou-7j-eZu"/>
                             <constraint firstItem="h3E-xI-b4P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="1s5-dS-inW"/>
                             <constraint firstItem="4Yx-KZ-V5O" firstAttribute="bottom" secondItem="Eqy-I5-adp" secondAttribute="top" constant="-8" id="47D-bG-l1b"/>
                             <constraint firstItem="4fE-aB-PR9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5qj-gd-kQu"/>
@@ -99,10 +108,12 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="costLabel" destination="uKj-x5-MWE" id="FJu-7Z-Mla"/>
                         <outlet property="highButton" destination="akk-Dh-WI4" id="QOa-fp-T95"/>
-                        <outlet property="lowButton" destination="h3E-xI-b4P" id="tYk-cQ-VBI"/>
-                        <outlet property="mediumButton" destination="4Yx-KZ-V5O" id="usJ-4s-LK0"/>
+                        <outlet property="lowButton" destination="h3E-xI-b4P" id="AKN-RR-4fR"/>
+                        <outlet property="mediumButton" destination="4Yx-KZ-V5O" id="iER-oA-T45"/>
                         <outlet property="planetPickerView" destination="Eqy-I5-adp" id="DmY-3W-WQ2"/>
+                        <outlet property="spaceJunkLevelLabel" destination="4fE-aB-PR9" id="EN4-Dx-QTq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
