--- a/SpacePizza/Base.lproj/Main.storyboard
+++ b/SpacePizza/Base.lproj/Main.storyboard
@@ -78,19 +78,12 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="S  p  a  c  e    J u n k    L e v e l" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4fE-aB-PR9">
-                                <rect key="frame" x="56" y="330" width="262" height="28"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.70254823825503354" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.28880119319999997" green="0.56275337930000002" blue="0.88472884890000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="akk-Dh-WI4" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="1ou-7j-eZu"/>
                             <constraint firstItem="h3E-xI-b4P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="1s5-dS-inW"/>
                             <constraint firstItem="4Yx-KZ-V5O" firstAttribute="bottom" secondItem="Eqy-I5-adp" secondAttribute="top" constant="-8" id="47D-bG-l1b"/>
-                            <constraint firstItem="4fE-aB-PR9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5qj-gd-kQu"/>
                             <constraint firstItem="uKj-x5-MWE" firstAttribute="top" secondItem="ee6-cZ-A0b" secondAttribute="bottom" constant="40" id="9Mp-j7-DsP"/>
                             <constraint firstItem="ee6-cZ-A0b" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="EuM-XN-v91"/>
                             <constraint firstItem="h3E-xI-b4P" firstAttribute="bottom" secondItem="Eqy-I5-adp" secondAttribute="top" constant="-8" id="F7P-wm-28P"/>
@@ -103,22 +96,17 @@
                             <constraint firstItem="akk-Dh-WI4" firstAttribute="bottom" secondItem="Eqy-I5-adp" secondAttribute="top" constant="-8" id="m1U-Ef-6Vu"/>
                             <constraint firstItem="Eqy-I5-adp" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="n6p-7p-yFu"/>
                             <constraint firstItem="4Yx-KZ-V5O" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qA5-rU-N5f"/>
-                            <constraint firstItem="4fE-aB-PR9" firstAttribute="bottom" secondItem="4Yx-KZ-V5O" secondAttribute="top" constant="-10" id="rcz-VQ-kzo"/>
                             <constraint firstItem="akk-Dh-WI4" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="wr4-a0-6UU"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="costLabel" destination="uKj-x5-MWE" id="FJu-7Z-Mla"/>
-                        <outlet property="highButton" destination="akk-Dh-WI4" id="QOa-fp-T95"/>
-                        <outlet property="lowButton" destination="h3E-xI-b4P" id="AKN-RR-4fR"/>
-                        <outlet property="mediumButton" destination="4Yx-KZ-V5O" id="iER-oA-T45"/>
                         <outlet property="planetPickerView" destination="Eqy-I5-adp" id="DmY-3W-WQ2"/>
-                        <outlet property="spaceJunkLevelLabel" destination="4fE-aB-PR9" id="EN4-Dx-QTq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="180" y="145.27736131934034"/>
+            <point key="canvasLocation" x="183" y="158"/>
         </scene>
     </scenes>
 </document>
